Dune Dynasty
============

Version 1.6.1 (unreleased)
-------------------------
  - Add new gameplay enhancement option for consistent directional attack damage
    (see enhancement.txt for details)
    (thanks @gerwin!)

Version 1.6.0
-------------------------
  - Many unreleased changes (incl. multiplayer!)
    that were added from 2013-2015 in SourceForge SVN
    (https://sourceforge.net/projects/dunedynasty/)
    mainly by David Wang, the original Dune Dynasty creator.
    (See commits by "dwang" in this timeframe for details.)
  - Merge fixes and improvements from https://github.com/1oom-fork/dunedynasty
    o Ctrl + RMB sets rally points for all similar buildings
    o Ctrl shows rally points for all similar buildings
    o Ctrl + LMB selects all units of the same type
    o Fix AI bug: sandworm wakes AI if seen by AI
    o Gameplay fix: update the unit's vision every time it moves
    o Capture the mouse if the game is not paused
    o New hotkey: select next building of the same type (Tab key)
    o New hotkey: focus viewport on selected structure (Space key)
    o Draw health bars for all visible units in "All units" mode
    o Fix save/load bug: fix fog data loss in saved games
    o Fix pathfinder freeze in case if destination is out of map
    o Action Panel title text no longer reacts to mouse clicks
    o Action Panel title click behavior moved to the portrait
    o Add old style status button to action panel
    o Remove Send Order button from Starport menu (uses status button)
    o Add new status button for Palace menu
    o Pause/Cancel factory task by pressing ESC
    o Pause/Cancel factory task by rmb click on status button
    o Fix critical saveload bug which breaks the behavior of starports
    o Fix attempts to spawn Fremen outside the map
    o Bind hotkey H to Harvest and F4 to select construction yard
    o Add hotkeys for each type of unit/structure
    o Bind unit/structure hotkeys to action panel
    o Add hotkey hints to action panel