@@ -74,6 +74,7 @@ extern bool enhancement_targetted_sabotage;
 extern bool enhancement_true_game_speed_adjustment;
 extern bool enhancement_true_unit_movement_speed;
 extern bool enhancement_attack_dir_consistency;
+extern bool enhancement_skip_introduction;
 
 extern bool enhancement_fix_scenario_typos;
 extern bool enhancement_read_scenario_structure_health;
