@@ -6,6 +6,7 @@ Version 1.6.1 (unreleased)
   - Add new gameplay enhancement option for consistent directional attack damage
     (see enhancement.txt for details)
     (thanks @gerwin!)
+  - Autoplay introduction video on launch and add option to disable it
 
 Version 1.6.0
 -------------------------
